scaled images and fixed review video
Some images were way too big, so they are now scaled to be smaller. Some minor fixes include the modal on the contacts page

--- a/css/home.css
+++ b/css/home.css
@@ -715,10 +715,13 @@ iframe {
   width: 100%;
 }
 
+.testimonial-media{
+  display: flex;
+  justify-content: center;
+}
+
 .testimonial-video {
   width: 100%;
-  height: 250px;
-  max-height: 250px;
   border-radius: 10px;
 }
 
